--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
   <h1>Jim Wheeler</h1>
   <p>Welcome to my website!</p>
+ <!-- 
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ -->
+  <img src="./img_1762.jpeg"/>
 </body>
  
 </html>
