--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <!-- 
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
  -->
-  <img src="img_1762.jpeg"/>
+  <img src="/img_1762.jpeg"/>
 </body>
  
 </html>
